<resources>
    <string name="app_name">App Lista Curso</string>
    <string name="txt_titulo">App Lista Curso</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_nome_do_curso">Nome do Curso</string>
    <string name="txt_hint_edit_telefone_de_contato">Telefone de Contato</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_button_limpar">limpar</string>
    <string name="txt_button_salvar">salvar</string>
    <string name="txt_button_finalizar">FINALIZAR</string>
    <string name="txt_selecione_o_curso">Selecione o Curso</string>
</resources>