<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-28dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:textSize="20sp"
        android:textStyle="bold"
         />

    <EditText
        android:id="@+id/editPrimeiroNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_hint_edit_primeiro_nome"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        />

    <EditText
        android:id="@+id/editSobrenome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_hint_edit_sobrenome"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        />

    <EditText
        android:id="@+id/editCursoDesejado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_nome_do_curso"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTelefoneContato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_telefone_de_contato"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_button_limpar"
        />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_button_salvar"
        />

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_button_finalizar"
    />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/txtListaSpinner"
        android:layout_width="177dp"
        android:layout_height="27dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="319dp"
        android:text="Selecione o Curso"
        android:textSize="20sp"
        android:textStyle="bold"
       />

</androidx.appcompat.widget.LinearLayoutCompat>